--- a/index.html
+++ b/index.html
@@ -125,20 +125,25 @@
                         <li class="item">
                             <div class="img-thumb">
                                 <img src="./images/img-box1.jpg" title="Компьютер" width="370">
-                                <p>Десктопные приложения</p>
-                            </div>
-                            
+                                <div class="img-thumb-text">
+                                    <p>Десктопные приложения</p>
+                                </div>
+                            </div> 
                         </li>
                         <li class="item">
                             <div class="img-thumb">
                                 <img src="./images/img-box2.jpg" title="Мобильный телефон" width="370">
-                                <p>Мобильные приложения</p>
+                                <div class="img-thumb-text">
+                                    <p>Мобильные приложения</p>
+                                </div>
                             </div>
                         </li>
                         <li class="item">
                             <div class="img-thumb">
                                 <img src="./images/img-box3.jpg" title="Планшет" width="370">
-                                <p>Дизайнерские решения</p>
+                                <div class="img-thumb-text">
+                                    <p>Дизайнерские решения</p>
+                                </div>
                             </div>
                         </li>
                     </ul>
@@ -323,42 +328,42 @@
                     <ul class="clients list">
                         <li class="item">
                             <a href="#" class="icon-Logo-thumb">
-                                <svg class="icon-Logo" width="106" height="60">
+                                <svg width="106" height="60">
                                     <use href="./images/sprite.svg#icon-Logo"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="#" class="icon-Logo-thumb">
-                                <svg class="icon-Logo-2" width="106" height="60">
+                                <svg width="106" height="60">
                                     <use href="./images/sprite.svg#icon-Logo-2"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="#" class="icon-Logo-thumb">
-                                <svg class="icon-Logo-3" width="106" height="60">
+                                <svg width="106" height="60">
                                     <use href="./images/sprite.svg#icon-Logo-3"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="#" class="icon-Logo-thumb">
-                                <svg class="icon-Logo-4" width="106" height="60">
+                                <svg width="106" height="60">
                                     <use href="./images/sprite.svg#icon-Logo-4"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="#" class="icon-Logo-thumb">
-                                <svg class="icon-Logo-5" width="106" height="60">
+                                <svg width="106" height="60">
                                     <use href="./images/sprite.svg#icon-Logo-5"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="item">
                             <a href="#" class="icon-Logo-thumb">
-                                <svg class="icon-Logo-6" width="106" height="60">
+                                <svg width="106" height="60">
                                     <use href="./images/sprite.svg#icon-Logo-6"></use>
                                 </svg>
                             </a>
